--- a/titanic_analysis_vj (1).ipynb
+++ b/titanic_analysis_vj (1).ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ---------------------Analysis of the Titanic dataset provided by Kaggle. 🚢---------------------"
+    "## ---------------------Analysis of the Titanic dataset 🚢---------------------"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Titanic dataset using Pandas read_csv method and explore first 10 rows of the dataset"
+    "Titanic dataset using Pandas read_csv and explore first 10 rows of the dataset"
    ]
   },
   {
